# SyE

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp  test.yarik
.github/workflows/: build_test.yml
cmd/: main.cpp
configs/syntax_configs/: README.md  c++.yaml  golang.yaml
configs/theme_configs/: README.md  default.yaml
configs/widgets/: widgets.yaml
docs/: README.md  high-level-design-raw.md  roadmap.md
include/args/: args.hxx
include/ncursesw/ncurses/: term.h
include/openssl/: core_names.h
init/: init.cpp  init.h  init.hpp
internal/: .history.h.swp  colors.h  commands.h  file.h  history.h  index.hpp  loop.h  loop.hpp  middleware.h  position.h  spec_symbols.h  state.h
internal/bufs/: bufs.cpp  bufs.hpp
internal/bufs/helper/: helper.cpp  helper.hpp
internal/bufs/search_buf/: search_buf.cpp
internal/colors/: colors.cpp  colors.hpp
internal/colors/command/: command.cpp  command.hpp
internal/colors/effects/: effects.cpp  effects.hpp
internal/colors/font/: font.cpp  font.hpp
internal/colors/insert/: insert.cpp  insert.hpp
internal/commands/: commands.cpp  commands.hpp  pool.cpp  pool.hpp
internal/commands/applicator/: applicator.cpp  applicator.hpp
internal/commands/helper/: helper.cpp  helper.hpp
internal/commands/search/: search.cpp  search.hpp
internal/commands/set_color/: set_color.cpp  set_color.hpp
internal/commands/set_insert_color/: set_insert_color.cpp  set_insert_color.hpp
internal/commands/w/: w.cpp  w.hpp
internal/commands/z/: z.cpp  z.hpp
internal/config/: config.hpp
internal/context/: context.cpp  context.hpp
internal/editor_status/: editor_status.cpp  editor_status.hpp
internal/file/: file.cpp  file.hpp
internal/files/: file.cpp  file.hpp  files.cpp  files.hpp
internal/files/config/: config.cpp  config.hpp
internal/files/configs/: config.cpp  config.hpp
internal/files/configs/helper/: helper.cpp  helper.hpp
internal/files/configs/syntax_config/: syntax_config.cpp  syntax_config.hpp
internal/files/configs/theme_config/: theme_config.cpp  theme_config.hpp
internal/files/configs/widgets/: widgets.cpp  widgets.hpp
internal/files/exec/: exec.cpp  exec.hpp
internal/files/helper/: helper.cpp  helper.hpp
internal/files/log/: log.cpp  log.hpp
internal/helper/: helper.cpp  helper.hpp
internal/highlighter/: highlighter.cpp  highlighter.hpp
internal/history/: history.cpp  history.hpp
internal/keys/: keys.cpp  keys.hpp
internal/log/dev/: dev.cpp  dev.hpp
internal/loop/: loop.cpp  loop.hpp
internal/loop/helper/: helper.cpp  helper.hpp
internal/loop/initialisers/: initialisers.cpp  initialisers.hpp
internal/loop/processors/: processors.cpp  processors.hpp
internal/margin/: margin.cpp  margin.hpp
internal/messages/: messages.cpp  messages.hpp
internal/position/: position.cpp  position.hpp
internal/position/win_resizer/: win_resizer.cpp  win_resizer.hpp
internal/render/: render.cpp  render.hpp
internal/search_buf/: search_buf.hpp
internal/state/: state.cpp  state.hpp
internal/states/: states.cpp  states.hpp
internal/states/command/: command.cpp  command.hpp
internal/states/command/commands/: commands.cpp  commands.hpp
internal/states/common/: common.cpp  common.hpp
internal/states/common/helper/: helper.cpp  helper.hpp
internal/states/insert/: insert.cpp  insert.hpp
internal/states/pool/: pool.cpp  pool.hpp
internal/states/search/: search.cpp  search.hpp
internal/status/: status.cpp  status.hpp
internal/term_flags/: term_flags.cpp  term_flags.hpp
internal/types/: types.hpp
internal/widgets/helper/: helper.hpp
internal/widgets/time/: time.cpp  time.hpp
lib/boost/: libboost_atomic-mt.dylib  libboost_chrono-mt.dylib  libboost_container.dylib  libboost_context-mt.dylib  libboost_contract-mt.dylib  libboost_contract.dylib  libboost_date_time-mt.dylib  libboost_date_time.dylib  libboost_fiber-mt.dylib  libboost_filesystem-mt.dylib  libboost_filesystem.dylib  libboost_graph.dylib  libboost_iostreams-mt.dylib  libboost_json-mt.dylib  libboost_json.dylib  libboost_math_c99f-mt.dylib  libboost_math_c99f.dylib  libboost_math_tr1-mt.dylib  libboost_math_tr1f-mt.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l-mt.dylib  libboost_math_tr1l.dylib  libboost_nowide-mt.dylib  libboost_prg_exec_monitor-mt.dylib  libboost_program_options.dylib  libboost_random-mt.dylib  libboost_regex.dylib  libboost_serialization-mt.dylib  libboost_serialization.dylib  libboost_stacktrace_addr2line.dylib  libboost_stacktrace_noop-mt.dylib  libboost_system.dylib  libboost_timer.dylib  libboost_type_erasure-mt.dylib  libboost_type_erasure.dylib  libboost_unit_test_framework-mt.dylib  libboost_wave-mt.dylib  libboost_wave.dylib
lib/boost/cmake/boost_atomic-1.76.0/: libboost_atomic-variant-mt-shared.cmake  libboost_atomic-variant-mt-static.cmake
lib/boost/cmake/boost_chrono-1.76.0/: libboost_chrono-variant-mt-shared.cmake  libboost_chrono-variant-mt-static.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
lib/boost/cmake/boost_container-1.76.0/: libboost_container-variant-mt-shared.cmake  libboost_container-variant-mt-static.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
lib/boost/cmake/boost_context-1.76.0/: libboost_context-variant-mt-shared.cmake  libboost_context-variant-mt-static.cmake
lib/yaml-cpp/: libyaml-cpp.0.6.3.dylib
samples/config/: config.yaml
samples/theme/: cpp.yaml  golang.yaml
samples/themes/: cpp.yaml
scripts/: install_dependencies.sh
src/cmd/: main.cpp
src/internal/logger/: logger.cpp  logger.hpp
src/internal/scheduler/: scheduler.hpp
src/internal/signal/: signal.cpp  signal.hpp
src/internal/state/: state.cpp  state.hpp
src/internal/tools/: tools.cpp  tools.hpp
syntax_configs/: README.md  c++.yaml  golang.yaml
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  buf_test.cpp  cmake_install.cmake  main.cpp
tools/exceptions/: exceptions.hpp
tools/template_assertion/: template_assertion.hpp
(+529 files in other folders)
